Clean snow_cover data and save as csv

--- a/data-cleaning_empty.qmd
+++ b/data-cleaning_empty.qmd
@@ -1,6 +1,8 @@
 ---
 title: "Data Cleaning"
 format: html
+editor_options: 
+  chunk_output_type: console
 ---
 
 
@@ -9,6 +11,7 @@ format: html
 
 # Libraries
 library(tidyverse)
+library(naniar)
 
 # file names
 datadir_raw <- file.path("data","raw")
@@ -39,6 +42,8 @@ glimpse(snowsurvey_csv)
 
 ```
 
+when we initially explore the data, we see that the Snow_cover column that we are interested in is of type character. 
+
 Ok, the types are not what we were expecting for the percentages of cover. Let's find out why:
 
 ```{r}
@@ -50,7 +55,8 @@ Let's focus on the non-numeric values as a starting point:
 
 ```{r}
 snowsurvey_csv %>%
-
+  count(Snow_cover) %>% 
+  filter(is.na(as.numeric(Snow_cover)))
 ```
 
 ### Data cleaning
@@ -68,7 +74,8 @@ snowsurvey_csv %>%
 Interestingly, when there is a "dot" for snow cover, it is also the case for all the other covers. Let's replace those with NA since there is no supplemental information in the provided metadata about the use of dots
 
 ```{r}
-snowsurvey_fixed <- 
+snowsurvey_fixed <- snowsurvey_csv %>% 
+  mutate(Snow_cover = ifelse(Snow_cover=='.', NA, c(Snow_cover,Water_cover, Land_cover, Total_cover)))
 ```
 
 #### `-` values
@@ -76,14 +83,17 @@ snowsurvey_fixed <-
 Is he problem is similar with "-"?
 
 ```{r}
-snowsurvey_csv 
+snowsurvey_csv %>% 
+  filter(Snow_cover == "-") %>%
+  View()
 ```
 
 
 let's set it to NA:
 
 ```{r}
-snowsurvey_fixed <- 
+snowsurvey_fixed <- snowsurvey_fixed %>% 
+  mutate(Snow_cover = ifelse(Snow_cover=='-', NA, Snow_cover))
 ```
 
 #### `n/a` values
@@ -99,8 +109,8 @@ snowsurvey_csv %>%
 Same pattern, let's substitute with NA:
 
 ```{r}
-snowsurvey_fixed <- 
- 
+snowsurvey_fixed <- snowsurvey_fixed %>% 
+  mutate(Snow_cover = ifelse(Snow_cover=='n/a', NA, Snow_cover))
 ```
 
 #### `unk` values
@@ -114,7 +124,8 @@ snowsurvey_csv %>%
 
 
 ```{r}
-snowsurvey_fixed <- 
+snowsurvey_fixed <- snowsurvey_fixed %>% 
+  mutate(Snow_cover = ifelse(Snow_cover=='unk', NA, Snow_cover))
 ```
 
 #### `<1` values
@@ -122,11 +133,17 @@ snowsurvey_fixed <-
 Finally What should we replace"<1" with?
 
 ```{r}
-
+snowsurvey_csv %>% 
+  filter(Snow_cover == "<1") %>%
+  View()
 ```
 
-```{r}
 
+```{r}
+snowsurvey_fixed <- snowsurvey_fixed %>% 
+  mutate(Snow_cover = ifelse(Snow_cover=='<1', 0, Snow_cover))
+
+# when looking at the metadata, we see that we want all three of our covers to add up to our total_cover (duh!) so for our one row that has the value <1 for Snow_cover, we see that the other two columns add up to the total cover. So, we can just make the Snow_cover equal to 0. 
 ```
 
 
@@ -143,7 +160,8 @@ snowsurvey_fixed %>%
 Ok, we can do the transformation:
 
 ```{r}
-snowsurvey_fixed <- 
+snowsurvey_fixed <- snowsurvey_fixed %>% 
+  mutate(Snow_cover = as.numeric(Snow_cover))
 ```
 
 Yeah we have finally a numeric column 🎉. 
@@ -154,13 +172,14 @@ Yeah we have finally a numeric column 🎉.
 We are dealing with percentages, so we should verify that all the values are between 0 and 100:
 
 ```{r}
- snowsurvey_fixed 
+snowsurvey_fixed %>% filter(Snow_cover > 100)
 ```
 
 We have two values above 100, with an interesting 470%! ☃️ We should probably set those values to NAs:
 
 ```{r}
-snowsurvey_fixed <- 
+snowsurvey_fixed <- snowsurvey_fixed %>% 
+  mutate(Snow_cover = ifelse(Snow_cover > 100, NA, Snow_cover))
 ```
 
 Let's check for negative values:
